@@ -3,6 +3,8 @@ ddetect (1.12) UNRELEASED; urgency=low
   * Joey Hess
     - Load ide-core explicitly rather than implicitly to allow the user to
       specify parameters sush as hda=stroke when the module is loaded.
+    - Add ide-disk to /etc/modules on systems with ide, to handle cases such
+      as a scsi disk for root and ide disk for /usr.
   * Sven Luther
     - Added detection code for NuBus powermacs.
 
